--- a/style.css
+++ b/style.css
@@ -3,4 +3,5 @@ header {
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: inline-block;
+    color:coral
 }
