--- a/style.css
+++ b/style.css
@@ -3,5 +3,10 @@ header {
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     display: inline-block;
-    color:coral
+    color:coral;
+    margin: 20px;
+}
+
+ol {
+    display: inline-block;
 }
